# scriva

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  Makefile  README.md  ROADMAP.md  buf.gen.yaml  docker-compose.yml  filedb.example.yaml  go.mod  go.sum  roadmap.md  scriva.example.yaml  scriva.go  scriva_test.go
.github/workflows/: ci.yml  publish-clients.yml  release.yml
clients/: PLAN.md
clients/clojure/: README.md  project.clj
clients/clojure/proto/google/api/: annotations.proto  http.proto
clients/clojure/src/scriva/: client.clj  example.clj
clients/clojure/test/scriva/: client_test.clj
clients/csharp/: .gitignore  FileDBv2.Client.sln  README.md  Scriva.Client.sln
clients/csharp/FileDBv2.Client/: Exceptions.cs  FileDB.cs  FileDBv2.Client.csproj
clients/csharp/FileDBv2.Client/proto/: filedb.proto
clients/csharp/FileDBv2.Example/: FileDBv2.Example.csproj  Program.cs
clients/csharp/Scriva.Client/: Exceptions.cs  README.md  Scriva.Client.csproj  ScrivaDB.cs
clients/csharp/Scriva.Example/: Program.cs  Scriva.Example.csproj
clients/java/: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
clients/js/: .gitignore  README.md  generate.sh  package-lock.json  package.json
clients/js/examples/: test_basic.ts  test_watch.ts
clients/js/src/: client.ts  index.ts  types.ts
clients/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
clients/php/: README.md  composer.json  generate.sh
clients/php/examples/: test_basic.php  test_watch.php
clients/php/src/: AlreadyExistsException.php  FileDB.php  FileDBException.php  NotFoundException.php  ScrivaDB.php  ScrivaDBException.php
clients/php/src/Proto/GPBMetadata/: Filedb.php  Scriva.php
clients/python/: .gitignore  README.md  generate.sh  pyproject.toml
clients/python/examples/: test_basic.py  test_watch.py
clients/python/src/filedbv2/: __init__.py  client.py
clients/python/src/filedbv2/proto/: filedb_pb2.py  filedb_pb2_grpc.py
clients/python/src/scriva/: __init__.py  client.py
clients/python/src/scriva/proto/: scriva_pb2.py  scriva_pb2_grpc.py
clients/ruby/: .gitignore  README.md  filedbv2.gemspec  generate.sh  scriva.gemspec
clients/ruby/examples/: test_basic.rb  test_watch.rb
clients/ruby/lib/: filedbv2.rb  scriva.rb
clients/ruby/lib/filedbv2/: client.rb  version.rb
clients/ruby/lib/filedbv2/proto/: filedb_pb.rb  filedb_services_pb.rb
clients/ruby/lib/scriva/: client.rb  version.rb
clients/ruby/lib/scriva/proto/: scriva_pb.rb  scriva_services_pb.rb
clients/ruby/proto/google/api/: http.proto
clients/rust/: Cargo.toml  README.md  build.rs
clients/rust/examples/: test_basic.rs  test_watch.rs
clients/rust/proto/: filedb.proto  scriva.proto
clients/rust/proto/google/api/: annotations.proto
clients/rust/src/: client.rs  lib.rs
clients/scala/: README.md  build.sbt
clients/scala/project/: plugins.sbt
clients/web/: index.html  package-lock.json  package.json
clients/web/src/: App.tsx
clients/web/src/api/: client.ts  types.ts
clients/web/src/components/: BrowseTab.tsx  CollectionView.tsx  ConnectScreen.tsx  RecordModal.tsx  WatchTab.tsx
clients/web/src/contexts/: AppContext.tsx
clients/web/src/hooks/: useRecords.ts
cmd/filedb/: main.go
cmd/filedb-cli/: commands.go  main.go  repl.go
cmd/scriva/: main.go
cmd/scriva-cli/: batch.go  commands.go  main.go  repl.go
docs/: architecture.md  embedding-implementation-plan.md  embedding.md  encryption-at-rest.md  getting-started.md  operations.md  roadmap-v0.2.md  roadmap-v0.6.md  warden-roadmap.md
docs/openapi/: filedb.swagger.json  scriva.swagger.json
embeddemo/: go.mod  main.go
engine/: aggregate.go  aggregate_test.go  bench_test.go  cas_test.go  collection.go  collection_config.go  collection_test.go  compact_crash_test.go  compact_manifest.go  compact_ondemand_test.go  compaction_property_test.go  compactor.go  compactor_test.go  count.go  count_test.go  db.go  db_config_test.go  example_watch_test.go  index.go  index_test.go  keys.go  keys_test.go  keyset_test.go  loadjsonl.go  loadjsonl_test.go  meta.go  promote_test.go  quota.go  quota_test.go  range_index_test.go  replication.go  replication_test.go  scan.go  scan_stats_test.go  scan_test.go  secondary_index.go  secondary_index_test.go  segment.go  segment_recovery_fuzz_test.go  segment_test.go  (+7 more)
examples/watch/: main.go
filedb/: filedb.go  filedb_test.go
internal/auth/: apikey.go  apikey_test.go  mtls.go  mtls_test.go  scope.go
internal/engine/: bench_test.go  collection.go  compaction_property_test.go  compactor.go  durability_hardening_test.go  durability_test.go  fsync.go  fsync_unix.go  fsync_windows.go  index.go  scan.go  scan_test.go  secondary_index.go  secondary_index_test.go  segment.go  segment_recovery_fuzz_test.go  txmanager.go  txmanager_test.go  watch_overflow_test.go
internal/envkey/: envkey.go
internal/metrics/: metrics.go  metrics_test.go
internal/pb/proto/: filedb.pb.go  filedb.pb.gw.go  filedb_grpc.pb.go  scriva.pb.go  scriva.pb.gw.go  scriva_grpc.pb.go
internal/query/: filter.go  filter_test.go
internal/store/: ndjson.go  ndjson_test.go
proto/: filedb.proto
query/: filter.go  filter_test.go
server/: audit.go  audit_integration_test.go  config.go  config_test.go  errmap_test.go  grpc.go  grpc_integration_test.go  health.go  limits.go  logging.go  mtls_integration_test.go  promote_integration_test.go  quota_integration_test.go  readonly.go  readonly_integration_test.go  replication.go  replication_integration_test.go  rest.go  tls.go  tracing.go  watch_rest.go
site/: astro.config.mjs  package-lock.json  package.json
site/src/content/docs/concepts/: architecture.md
site/src/content/docs/guides/: clients.md  data-model.md  durability-and-backup.md  embedding.md  queries.md  (+1 more)
site/src/pages/: index.astro
site/src/styles/: docs.css  landing.css
store/: ndjson.go  ndjson_test.go
(+150 files in other folders)
