[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scriva"
version = "1.2.1"
description = "Official Python client for ScrivaDB — a file-based document database with a gRPC API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "srjn45" }]
keywords = ["scriva", "database", "grpc", "document-store", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    # Provides google.api.annotations_pb2, referenced by the generated stubs
    # because scriva.proto carries grpc-gateway HTTP annotations.
    "googleapis-common-protos>=1.60",
]

[project.optional-dependencies]
# Needed only to regenerate the gRPC stubs via generate.sh.
codegen = ["grpcio-tools>=1.60"]

[project.urls]
Homepage = "https://github.com/srjn45/scriva"
Repository = "https://github.com/srjn45/scriva"
"Bug Tracker" = "https://github.com/srjn45/scriva/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scriva"]

[tool.hatch.build.targets.sdist]
include = ["src/scriva", "README.md", "generate.sh"]
