[package]
name = "filedbv2"
version = "0.1.0"
edition = "2021"
description = "Rust gRPC client for FileDB v2"
license = "MIT"
repository = "https://github.com/srjn45/filedbv2"
homepage = "https://github.com/srjn45/filedbv2"
documentation = "https://docs.rs/filedbv2"
keywords = ["filedb", "grpc", "database", "tonic", "client"]
categories = ["database", "api-bindings", "asynchronous"]
readme = "README.md"
exclude = ["proto/", "examples/"]

[lib]
name = "filedbv2"
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
futures = "0.3"

[build-dependencies]
tonic-build = "0.11"

[[example]]
name = "test_basic"
path = "examples/test_basic.rs"

[[example]]
name = "test_watch"
path = "examples/test_watch.rs"
